--- a/source/index.html
+++ b/source/index.html
@@ -31,10 +31,9 @@
 
         <button class="nav__toggle button-reset" type="button">
           <span>Меню</span>
-          <div class="nav__toggle-icon">
+          <span class="nav__toggle-icon">
             <span class="visually-hidden">Открыть/закрыть меню.</span>
-          </div>
-
+          </span>
         </button>
 
         <ul class="nav__list list-reset">
@@ -92,6 +91,7 @@
     </header>
 
     <main class="main-content">
+
       <section class="hero" id="hero" data-test="hero">
 
         <h2 class="visually-hidden">Наши зарубежные стажировки.</h2>
@@ -227,7 +227,63 @@
 
       </section>
 
-      <div data-test="about">about</div>
+      <section class="about" data-test="about" id="about">
+        <div class="about__container container">
+
+          <div class="about__wrapper">
+
+            <div class="about__intro">
+              <h2 class="about__title title">О проекте «Стажировка»</h2>
+              <p>«Стажировка» — совместный проект правительств и волонтёрских бригад.</p>
+            </div>
+
+            <div class="about__content">
+              <h3>Наша цель</h3>
+              <p>Наша деятельность направлена на повышение квалификации молодых специалистов на ранних и средних стадиях карьеры, предоставляя им инструменты для решения сложных проблем, с которыми сталкиваются в мире. Цель центра — наделить этих людей способностью инициировать значимые изменения.</p>
+              <a class="about__button button" href="#form">
+                <span>Подробнее о проекте</span>
+                <span class="button__icon">
+                  <svg width="10" height="10" viewBox="0 0 10 10" role="img" aria-hidden="true" focusable="false">
+                    <use href="/__spritemap#sprite-button-arrow"></use>
+                  </svg>
+                </span>
+              </a>
+            </div>
+
+          </div>
+
+          <div class="about__details details">
+
+            <ul class="details__list list-reset">
+
+              <li class="details__item">
+                <h4>Более 250 программ</h4>
+                <p>учебных и рабочих, разной длительностью от 3 месяцев до 1 года</p>
+              </li>
+
+              <li class="details__item">
+                <h4>Более 3000 участников</h4>
+                <p>уже успешно прошли программу от «Стажировка» и остались в разных странах</p>
+              </li>
+
+              <li class="details__item">
+                <h4>участники из 60 стран</h4>
+                <p>студенты со всего мира приезжают на программу «Стажировки» от 3 месяцев до 1 года</p>
+              </li>
+
+              <li class="details__item">
+                <h4>от 4 200 $<br>до 8 400 $</h4>
+                <p>грант всем участникам для комфортного прохождения программы</p>
+              </li>
+
+            </ul>
+
+          </div>
+
+        </div>
+
+      </section>
+
       <div data-test="programs">programs</div>
       <div data-test="grant">grant</div>
       <div data-test="news">news</div>
