--- a/source/index.html
+++ b/source/index.html
@@ -284,7 +284,215 @@
 
       </section>
 
-      <div data-test="programs">programs</div>
+      <section class="programs" id="programs" data-test="programs">
+
+        <div class="programs__container container">
+
+          <div class="programs__wrapper">
+
+            <h2 class="programs__title title">Программы</h2>
+
+            <div class="programs__slider-navigation slider-navigation">
+
+              <button class="programs__button-navigation programs__button--prev slider-navigation__button slider-navigation__button--prev button-reset swiper-button swiper-button-prev" type="button">
+                <span class="visually-hidden">Предыдущий слайд.</span>
+                <svg width="10" height="10" role="img" aria-hidden="true" focusable="false">
+                  <use href="/__spritemap#sprite-slider-arrow"></use>
+                </svg>
+              </button>
+
+              <button class="programs__button-navigation programs__button--next slider-navigation__button slider-navigation__button--next button-reset swiper-button swiper-button-next" type="button">
+                <span class="visually-hidden">Следующий слайд.</span>
+                <svg width="10" height="10" role="img" aria-hidden="true" focusable="false">
+                  <use href="/__spritemap#sprite-slider-arrow"></use>
+                </svg>
+              </button>
+            </div>
+
+            <div class="programs__swiper swiper">
+              <ul class="programs__list list-reset swiper-wrapper">
+
+                <li class="programs__item swiper-slide">
+
+                  <div class="programs__image">
+                    <picture>
+                      <source type="image/webp" media="(min-width: 1440px)" srcset="img/programs/1-programs-desktop@1.webp 1x, img/programs/1-programs-desktop@2.webp 2x" width="392" height="420">
+                      <source type="image/webp" media="(min-width: 768px)" srcset="img/programs/1-programs-tablet@1.webp 1x, img/programs/1-programs-tablet@2.webp 2x" width="324" height="420">
+                      <source type="image/webp" srcset="img/programs/1-programs-mobile@1.webp 1x, img/programs/1-programs-mobile@2.webp 2x" width="290" height="400">
+                      <source type="image/jpeg" media="(min-width: 1440px)" srcset="img/programs/1-programs-desktop@1.jpg, img/programs/1-programs-desktop@2.jpg 2x" width="392" height="420">
+                      <source type="image/jpeg" media="(min-width: 768px)" srcset="img/programs/1-programs-tablet@1.jpg, img/programs/1-programs-tablet@2.jpg 2x" width="324" height="420">
+                      <img src="img/programs/1-programs-mobile@1.jpg" srcset="img/programs/1-programs-mobile@2.jpg 2x" alt="Две улыбающиеся девушки, изучающие документы." width="290" height="400">
+                    </picture>
+                  </div>
+
+                  <h3 class="programs__subtitle subtitle">Стажировки</h3>
+
+                  <div class="programs__content">
+                    <p>Получите незаменимый опыт работы в крупнейших мировых компаниях.</p>
+                    <a class="programs__button-icon button-icon" href="#">
+                      <span class="visually-hidden">Подробнее</span>
+                      <svg width="10" height="10" viewBox="0 0 10 10" role="img" aria-hidden="true" focusable="false">
+                        <use href="/__spritemap#sprite-button-arrow"></use>
+                      </svg>
+                    </a>
+                  </div>
+
+                </li>
+
+                <li class="programs__item swiper-slide">
+
+                  <div class="programs__image">
+                    <picture>
+                      <source type="image/webp" media="(min-width: 1440px)" srcset="img/programs/2-programs-desktop@1.webp 1x, img/programs/2-programs-desktop@2.webp 2x" width="392" height="420">
+                      <source type="image/webp" media="(min-width: 768px)" srcset="img/programs/2-programs-tablet@1.webp 1x, img/programs/2-programs-tablet@2.webp 2x" width="324" height="420">
+                      <source type="image/webp" srcset="img/programs/2-programs-mobile@1.webp 1x, img/programs/2-programs-mobile@2.webp 2x" width="290" height="400">
+                      <source type="image/jpeg" media="(min-width: 1440px)" srcset="img/programs/2-programs-desktop@1.jpg, img/programs/2-programs-desktop@2.jpg 2x" width="392" height="420">
+                      <source type="image/jpeg" media="(min-width: 768px)" srcset="img/programs/2-programs-tablet@1.jpg, img/programs/2-programs-tablet@2.jpg 2x" width="324" height="420">
+                      <img src="img/programs/2-programs-mobile@1.jpg" srcset="img/programs/2-programs-mobile@2.jpg 2x" alt="Улыбающийся парень в синей футболке с надписью Волонтёр." width="290" height="400">
+                    </picture>
+                  </div>
+
+                  <h3 class="programs__subtitle subtitle">Волонтёрство</h3>
+
+                  <div class="programs__content">
+                    <p>Помогайте другим и развивайте свои лидерские качества.</p>
+                    <a class="programs__button-icon button-icon" href="#">
+                      <span class="visually-hidden">Подробнее</span>
+                      <svg width="10" height="10" viewBox="0 0 10 10" role="img" aria-hidden="true" focusable="false">
+                        <use href="/__spritemap#sprite-button-arrow"></use>
+                      </svg>
+                    </a>
+                  </div>
+                </li>
+
+                <li class="programs__item swiper-slide">
+
+                  <div class="programs__image">
+                    <picture>
+                      <source type="image/webp" media="(min-width: 1440px)" srcset="img/programs/3-programs-desktop@1.webp 1x, img/programs/3-programs-desktop@2.webp 2x" width="392" height="420">
+                      <source type="image/webp" media="(min-width: 768px)" srcset="img/programs/3-programs-tablet@1.webp 1x, img/programs/3-programs-tablet@2.webp 2x" width="324" height="420">
+                      <source type="image/webp" srcset="img/programs/3-programs-mobile@1.webp 1x, img/programs/3-programs-mobile@2.webp 2x" width="290" height="400">
+                      <source type="image/jpeg" media="(min-width: 1440px)" srcset="img/programs/3-programs-desktop@1.jpg, img/programs/3-programs-desktop@2.jpg 2x" width="392" height="420">
+                      <source type="image/jpeg" media="(min-width: 768px)" srcset="img/programs/3-programs-tablet@1.jpg, img/programs/3-programs-tablet@2.jpg 2x" width="324" height="420">
+                      <img src="img/programs/3-programs-mobile@1.jpg" srcset="img/programs/3-programs-mobile@2.jpg 2x" alt="Молодой человек в библиотеке записывает конспект за столом." width="290" height="400">
+                    </picture>
+                  </div>
+
+                  <h3 class="programs__subtitle subtitle">Учёба</h3>
+
+                  <div class="programs__content">
+                    <p>Получите образование и измените своё будущее.</p>
+                    <a class="programs__button-icon button-icon" href="#">
+                      <span class="visually-hidden">Подробнее</span>
+                      <svg width="10" height="10" viewBox="0 0 10 10" role="img" aria-hidden="true" focusable="false">
+                        <use href="/__spritemap#sprite-button-arrow"></use>
+                      </svg>
+                    </a>
+                  </div>
+                </li>
+
+                <li class="programs__item swiper-slide">
+
+                  <div class="programs__image">
+                    <picture>
+                      <source type="image/webp" media="(min-width: 1440px)" srcset="img/programs/1-programs-desktop@1.webp 1x, img/programs/1-programs-desktop@2.webp 2x" width="392" height="420">
+                      <source type="image/webp" media="(min-width: 768px)" srcset="img/programs/1-programs-tablet@1.webp 1x, img/programs/1-programs-tablet@2.webp 2x" width="324" height="420">
+                      <source type="image/webp" srcset="img/programs/1-programs-mobile@1.webp 1x, img/programs/1-programs-mobile@2.webp 2x" width="290" height="400">
+                      <source type="image/jpeg" media="(min-width: 1440px)" srcset="img/programs/1-programs-desktop@1.jpg, img/programs/1-programs-desktop@2.jpg 2x" width="392" height="420">
+                      <source type="image/jpeg" media="(min-width: 768px)" srcset="img/programs/1-programs-tablet@1.jpg, img/programs/1-programs-tablet@2.jpg 2x" width="324" height="420">
+                      <img src="img/programs/1-programs-mobile@1.jpg" srcset="img/programs/1-programs-mobile@2.jpg 2x" alt="Две улыбающиеся девушки, изучающие документы." width="290" height="400">
+                    </picture>
+                  </div>
+
+                  <h3 class="programs__subtitle subtitle">Стажировки</h3>
+
+                  <div class="programs__content">
+                    <p>Получите незаменимый опыт работы в крупнейших мировых компаниях.</p>
+                    <a class="programs__button-icon button-icon" href="#">
+                      <span class="visually-hidden">Подробнее</span>
+                      <svg width="10" height="10" viewBox="0 0 10 10" role="img" aria-hidden="true" focusable="false">
+                        <use href="/__spritemap#sprite-button-arrow"></use>
+                      </svg>
+                    </a>
+                  </div>
+                </li>
+
+                <li class="programs__item swiper-slide">
+
+                  <div class="programs__image">
+                    <picture>
+                      <source type="image/webp" media="(min-width: 1440px)" srcset="img/programs/2-programs-desktop@1.webp 1x, img/programs/2-programs-desktop@2.webp 2x" width="392" height="420">
+                      <source type="image/webp" media="(min-width: 768px)" srcset="img/programs/2-programs-tablet@1.webp 1x, img/programs/2-programs-tablet@2.webp 2x" width="324" height="420">
+                      <source type="image/webp" srcset="img/programs/2-programs-mobile@1.webp 1x, img/programs/2-programs-mobile@2.webp 2x" width="290" height="400">
+                      <source type="image/jpeg" media="(min-width: 1440px)" srcset="img/programs/2-programs-desktop@1.jpg, img/programs/2-programs-desktop@2.jpg 2x" width="392" height="420">
+                      <source type="image/jpeg" media="(min-width: 768px)" srcset="img/programs/2-programs-tablet@1.jpg, img/programs/2-programs-tablet@2.jpg 2x" width="324" height="420">
+                      <img src="img/programs/2-programs-mobile@1.jpg" srcset="img/programs/2-programs-mobile@2.jpg 2x" alt="Улыбающийся парень в синей футболке с надписью Волонтёр." width="290" height="400">
+                    </picture>
+                  </div>
+
+                  <h3 class="programs__subtitle subtitle">Волонтёрство</h3>
+
+                  <div class="programs__content">
+                    <p>Помогайте другим и развивайте свои лидерские качества.</p>
+                    <a class="programs__button-icon button-icon" href="#">
+                      <span class="visually-hidden">Подробнее</span>
+                      <svg width="10" height="10" viewBox="0 0 10 10" role="img" aria-hidden="true" focusable="false">
+                        <use href="/__spritemap#sprite-button-arrow"></use>
+                      </svg>
+                    </a>
+                  </div>
+                </li>
+
+                <li class="programs__item swiper-slide">
+
+                  <div class="programs__image">
+                    <picture>
+                      <source type="image/webp" media="(min-width: 1440px)" srcset="img/programs/3-programs-desktop@1.webp 1x, img/programs/3-programs-desktop@2.webp 2x" width="392" height="420">
+                      <source type="image/webp" media="(min-width: 768px)" srcset="img/programs/3-programs-tablet@1.webp 1x, img/programs/3-programs-tablet@2.webp 2x" width="324" height="420">
+                      <source type="image/webp" srcset="img/programs/3-programs-mobile@1.webp 1x, img/programs/3-programs-mobile@2.webp 2x" width="290" height="400">
+                      <source type="image/jpeg" media="(min-width: 1440px)" srcset="img/programs/3-programs-desktop@1.jpg, img/programs/3-programs-desktop@2.jpg 2x" width="392" height="420">
+                      <source type="image/jpeg" media="(min-width: 768px)" srcset="img/programs/3-programs-tablet@1.jpg, img/programs/3-programs-tablet@2.jpg 2x" width="324" height="420">
+                      <img src="img/programs/3-programs-mobile@1.jpg" srcset="img/programs/3-programs-mobile@2.jpg 2x" alt="Молодой человек в библиотеке записывает конспект за столом." width="290" height="400">
+                    </picture>
+                  </div>
+
+                  <h3 class="programs__subtitle subtitle">Учёба</h3>
+
+                  <div class="programs__content">
+                    <p>Получите образование и измените своё будущее.</p>
+                    <a class="programs__button-icon button-icon" href="#">
+                      <span class="visually-hidden">Подробнее</span>
+                      <svg width="10" height="10" viewBox="0 0 10 10" role="img" aria-hidden="true" focusable="false">
+                        <use href="/__spritemap#sprite-button-arrow"></use>
+                      </svg>
+                    </a>
+                  </div>
+                </li>
+
+              </ul>
+            </div>
+
+            <div class="programs__scrollbar  swiper-scrollbar">
+              <div class="programs__scrollbar-drag swiper-scrollbar-drag">
+                <span class="visually-hidden">Прокрутить ползунок к следующим слайдам</span>
+              </div>
+            </div>
+
+            <a class="programs__button button" href="#">
+              <span>Все программы</span>
+              <span class="button__icon">
+                <svg width="10" height="10" role="img" aria-hidden="true" focusable="false">
+                  <use href="/__spritemap#sprite-button-arrow"></use>
+                </svg>
+              </span>
+            </a>
+
+          </div>
+
+        </div>
+
+      </section>
+
       <div data-test="grant">grant</div>
       <div data-test="news">news</div>
       <div data-test="FAQ">FAQ</div>
