add block programs

--- a/source/index.html
+++ b/source/index.html
@@ -355,7 +355,7 @@
                   <h3 class="programs__subtitle subtitle">Волонтёрство</h3>
 
                   <div class="programs__content">
-                    <p>Помогайте другим и развивайте свои лидерские качества.</p>
+                    <p>Помогайте другим и развивайте свои лидерские&nbsp;качества.</p>
                     <a class="programs__button-icon button-icon" href="#">
                       <span class="visually-hidden">Подробнее</span>
                       <svg width="10" height="10" viewBox="0 0 10 10" role="img" aria-hidden="true" focusable="false">
