add reviews block

--- a/source/index.html
+++ b/source/index.html
@@ -1031,17 +1031,18 @@
               <ul class="reviews__list list-reset swiper-wrapper">
 
                 <li class="reviews__item swiper-slide">
-
-                  <blockquote>
+                  <blockquote class="reviews__card">
                     <div class="reviews__intro">
-                      <picture>
-                        <source type="image/webp" media="(min-width: 768px)" srcset="img/reviews/1-reviews-tablet@1.webp 1x, img/reviews/1-reviews-tablet@2.webp 2x" width="90" height="90">
-                        <source type="image/webp" srcset="img/reviews/1-reviews-mobile@1.webp 1x, img/reviews/1-reviews-mobile@2.webp 2x" width="60" height="60">
-                        <source type="image/jpeg" media="(min-width: 768px)" srcset="img/reviews/1-reviews-tablet@1.jpg, img/reviews/1-reviews-tablet@2.jpg 2x" width="90" height="90">
-                        <img src="img/reviews/1-reviews-mobile@1.jpg" srcset="img/reviews/1-reviews-mobile@2.jpg 2x" alt="Кудрявая девушка в очках." width="60" height="60">
-                      </picture>
+                      <div class="reviews__image">
+                        <picture>
+                          <source type="image/webp" media="(min-width: 768px)" srcset="img/reviews/1-reviews-tablet@1.webp 1x, img/reviews/1-reviews-tablet@2.webp 2x" width="90" height="90">
+                          <source type="image/webp" srcset="img/reviews/1-reviews-mobile@1.webp 1x, img/reviews/1-reviews-mobile@2.webp 2x" width="60" height="60">
+                          <source type="image/jpeg" media="(min-width: 768px)" srcset="img/reviews/1-reviews-tablet@1.jpg, img/reviews/1-reviews-tablet@2.jpg 2x" width="90" height="90">
+                          <img src="img/reviews/1-reviews-mobile@1.jpg" srcset="img/reviews/1-reviews-mobile@2.jpg 2x" alt="Кудрявая девушка в очках." width="60" height="60">
+                        </picture>
+                      </div>
                       <cite>Лола<br>Алекс</cite>
-                      <dl>
+                      <dl class="reviews__info">
                         <div class="reviews__author-info">
                           <dt>Программа</dt>
                           <dd>Masa Art Challenge</dd>
@@ -1053,18 +1054,107 @@
                       </dl>
                     </div>
                     <div class="reviews__quote">
-                      <h3>Я могу с уверенностью сказать, что это был один из самых незабываемых опытов в&nbsp;жизни!</h3>
-                      <p>Я рекомендую программу «Стажировка» всем студентам, желающим получить незабываемые впечатления. Сочетание путешествий, общения и значимой работы действительно отличает её от других программ, и&nbsp;я&nbsp;чувствую огромную благодарность за&nbsp;предоставленную мне возможность.</p>
+                      <p><strong>Я могу с уверенностью сказать, что это был один из самых незабываемых опытов в жизни!</strong></p>
+                      <p>Я рекомендую программу «Стажировка» всем студентам, желающим получить незабываемые впечатления. Сочетание путешествий, общения и значимой работы действительно отличает её от других программ, и я чувствую огромную благодарность за предоставленную мне возможность.</p>
                     </div>
                   </blockquote>
+                </li>
 
+                <li class="reviews__item swiper-slide">
+                  <blockquote class="reviews__card">
+                    <div class="reviews__intro">
+                      <div class="reviews__image">
+                        <picture>
+                          <source type="image/webp" media="(min-width: 768px)" srcset="img/reviews/2-reviews-tablet@1.webp 1x, img/reviews/2-reviews-tablet@2.webp 2x" width="90" height="90">
+                          <source type="image/webp" srcset="img/reviews/2-reviews-mobile@1.webp 1x, img/reviews/2-reviews-mobile@2.webp 2x" width="60" height="60">
+                          <source type="image/jpeg" media="(min-width: 768px)" srcset="img/reviews/2-reviews-tablet@1.jpg, img/reviews/2-reviews-tablet@2.jpg 2x" width="90" height="90">
+                          <img src="img/reviews/2-reviews-mobile@1.jpg" srcset="img/reviews/2-reviews-mobile@2.jpg 2x" alt="Улыбающийся парень с бородой." width="60" height="60">
+                        </picture>
+                      </div>
+                      <cite>Давид<br>Иванов</cite>
+                      <dl class="reviews__info">
+                        <div class="reviews__author-info">
+                          <dt>Программа</dt>
+                          <dd>Volunteer Chance</dd>
+                        </div>
+                        <div class="reviews__author-info">
+                          <dt>Дата</dt>
+                          <dd>Лето 2022</dd>
+                        </div>
+                      </dl>
+                    </div>
+                    <div class="reviews__quote">
+                      <p><strong>Благодаря опыту стажировки я узнал так много нового о себе и об окружающем мире.</strong></p>
+                      <p>Каждый день был возможностью оказать ощутимое влияние на жизнь других людей. Я бы очень рекомендовал эту волонтёрскую программу всем, кто ищет значимый и незабываемый опыт. Организация была на высшем уровне. Для меня было честью быть частью такой удивительной инициативы.</p>
+                    </div>
+                  </blockquote>
+                </li>
+
+                <li class="reviews__item swiper-slide">
+                  <blockquote class="reviews__card">
+                    <div class="reviews__intro">
+                      <div class="reviews__image">
+                        <picture>
+                          <source type="image/webp" media="(min-width: 768px)" srcset="img/reviews/1-reviews-tablet@1.webp 1x, img/reviews/1-reviews-tablet@2.webp 2x" width="90" height="90">
+                          <source type="image/webp" srcset="img/reviews/1-reviews-mobile@1.webp 1x, img/reviews/1-reviews-mobile@2.webp 2x" width="60" height="60">
+                          <source type="image/jpeg" media="(min-width: 768px)" srcset="img/reviews/1-reviews-tablet@1.jpg, img/reviews/1-reviews-tablet@2.jpg 2x" width="90" height="90">
+                          <img src="img/reviews/1-reviews-mobile@1.jpg" srcset="img/reviews/1-reviews-mobile@2.jpg 2x" alt="Кудрявая девушка в очках." width="60" height="60">
+                        </picture>
+                      </div>
+                      <cite>Лола<br>Алекс</cite>
+                      <dl class="reviews__info">
+                        <div class="reviews__author-info">
+                          <dt>Программа</dt>
+                          <dd>Masa Art Challenge</dd>
+                        </div>
+                        <div class="reviews__author-info">
+                          <dt>Дата</dt>
+                          <dd>Осень 2022</dd>
+                        </div>
+                      </dl>
+                    </div>
+                    <div class="reviews__quote">
+                      <p><strong>Я могу с уверенностью сказать, что это был один из самых незабываемых опытов в жизни!</strong></p>
+                      <p>Я рекомендую программу «Стажировка» всем студентам, желающим получить незабываемые впечатления. Сочетание путешествий, общения и значимой работы действительно отличает её от других программ, и я чувствую огромную благодарность за предоставленную мне возможность.</p>
+                    </div>
+                  </blockquote>
+                </li>
+
+                <li class="reviews__item swiper-slide">
+                  <blockquote class="reviews__card">
+                    <div class="reviews__intro">
+                      <div class="reviews__image">
+                        <picture>
+                          <source type="image/webp" media="(min-width: 768px)" srcset="img/reviews/2-reviews-tablet@1.webp 1x, img/reviews/2-reviews-tablet@2.webp 2x" width="90" height="90">
+                          <source type="image/webp" srcset="img/reviews/2-reviews-mobile@1.webp 1x, img/reviews/2-reviews-mobile@2.webp 2x" width="60" height="60">
+                          <source type="image/jpeg" media="(min-width: 768px)" srcset="img/reviews/2-reviews-tablet@1.jpg, img/reviews/2-reviews-tablet@2.jpg 2x" width="90" height="90">
+                          <img src="img/reviews/2-reviews-mobile@1.jpg" srcset="img/reviews/2-reviews-mobile@2.jpg 2x" alt="Улыбающийся парень с бородой." width="60" height="60">
+                        </picture>
+                      </div>
+                      <cite>Давид<br>Иванов</cite>
+                      <dl class="reviews__info">
+                        <div class="reviews__author-info">
+                          <dt>Программа</dt>
+                          <dd>Volunteer Chance</dd>
+                        </div>
+                        <div class="reviews__author-info">
+                          <dt>Дата</dt>
+                          <dd>Лето 2022</dd>
+                        </div>
+                      </dl>
+                    </div>
+                    <div class="reviews__quote">
+                      <p><strong>Благодаря опыту стажировки я узнал так много нового о себе и об окружающем мире.</strong></p>
+                      <p>Каждый день был возможностью оказать ощутимое влияние на жизнь других людей. Я бы очень рекомендовал эту волонтёрскую программу всем, кто ищет значимый и незабываемый опыт. Организация была на высшем уровне. Для меня было честью быть частью такой удивительной инициативы.</p>
+                    </div>
+                  </blockquote>
                 </li>
 
               </ul>
             </div>
 
-            <div class="programs__scrollbar  swiper-scrollbar">
-              <div class="programs__scrollbar-drag swiper-scrollbar-drag">
+            <div class="reviews__scrollbar  swiper-scrollbar">
+              <div class="reviews__scrollbar-drag swiper-scrollbar-drag">
                 <span class="visually-hidden">Прокрутить ползунок к следующим слайдам</span>
               </div>
             </div>
